Working as intended, awaiting help from Matt.

--- a/about_me.html
+++ b/about_me.html
@@ -13,8 +13,6 @@
 </head>
 <body>
     <div class="all">
-
-        <!-- HEADER -->
         <nav id="myNav">
             <div class="brand">
                 <a href="home.html">Jonathan Tang Music</a>
@@ -33,12 +31,9 @@
                 <div class="line3"></div>
             </div>
         </nav>
-
-        <!-- MAIN CONTENT -->
         <section>
             <div class="biography">
-                <p class="bio_title">Biography</p>
-                <h4 class="bio_name">Jonathan Tang</h4>
+                <h2 class="bio_title">Biography</h2>
                 <img class="banner" src="img/gallery5.jpg">
                 <div class="headshot_background">
                     <img class="headshot" src="img/bio_headshot.png">
@@ -50,17 +45,14 @@
                         <h2>"That's a trombone?!"</h2>
                     </div>
                     <div class="bio">
-                        <p>Jonathan Tang is a freelance classical and jazz trombonist, arranger, educator, and personal trainer who is currently based in Cincinnati, Ohio.</p>
-                        <p>Jonathan was born in Augusta, Georgia, and unlike many musicians, his passion for music had a very late beginning. His first several years with the instrument wasn’t the best, which made him hate the trombone entirely. He even considered quitting music until he met his friend and colleague, Eric Spencer. Eric showed him how the trombone could sound and Jonathan immediately fell in love with the instrument. He recalls his initial reaction to Eric’s playing being “That’s a trombone?!” Ever since then, Jonathan has been on the path to become the best musician he can be.</p>
-                        <p>One of Jonathan’s philosophies is “Any music with a trombone is good music”, which in turn has led him to be a prolific musician on both tenor and bass trombone. Some of his favorite groups to perform with are the Slides of Cincinnati Trombone Quartet, Odyssey Big Band, Play of The Game, CCM Brass Choir, Southern Brass Quintet, and CCM Concert Orchestra. Additionally, some of his favorite productions he’s performed to date include Chicago, Nice Work If You Can Get It, Annie, and Guys and Dolls.</p>
-                        <p>Jonathan is currently a First-Year Master’s of Music student at the College-Conservatory of Music in Cincinnati, Ohio where he studies Trombone Performance with Timothy Anderson. Since he has been there, he’s had the opportunity to become a founding member of the Slides of Cincinnati Trombone Quartet. This distinguished quartet is comprised entirely of First-Year masters students from around the country. His other influential teachers include Richard Mason and Eric Spencer. He recently performed in masterclasses for Peter Steiner, Harry Watters, Eric Mintel Quartet, and Byron Stripling.</p>
+                        <p>Jonathan Tang is a freelance classical and jazz trombonist, educator, recording engineer, arranger, and personal trainer who is currently based in Cincinnati, Ohio. He was born in Augusta, Georgia, and unlike many musicians, his passion for music had a very late beginning. His first several years with the instrument were not the best, which made him loathe the trombone entirely. He even considered quitting music until he met his friend and colleague, Eric Spencer. Eric showed him how the trombone could sound and Jonathan immediately fell in love with the instrument. He recalls his initial reaction to Eric’s playing being, “that’s a trombone?!” Ever since then, Jonathan has been on the path to become the best musician he can be.</p>
+                        <p>One of Jonathan’s philosophies is “any music with a trombone is good music”, which in turn has led him to be a prolific musician on both tenor and bass trombone. Some of his favorite groups to perform with are the Queen City Trombone Quartet, Odyssey Big Band, Play of The Game, CCM Brass Choir, Southern Brass Quintet, and CCM Wind Symphony. Additionally, some of his favorite productions he’s performed to date include Chicago, Nice Work If You Can Get It, Annie, and Guys and Dolls.</p>
+                        <p>Jonathan is currently a Second-Year Masters of Music student at the College-Conservatory of Music in Cincinnati, Ohio where he studies Trombone Performance with Timothy Anderson. Since he has been there, he’s had the opportunity to become a founding member of the Queen City Trombone Quartet. This distinguished quartet is comprised entirely of masters students from around the country. His other influential teachers include Richard Mason and Eric Spencer. He recently performed in masterclasses for Peter Steiner, Harry Watters, Eric Mintel Quartet, and Byron Stripling.</p>
                         <p>In his spare time, Jonathan enjoys powerlifting and weight training, cooking, multi-tracking, photography, and playing video games.</p>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- FOOTER -->
         <footer class="footer">
             <div class="social">
                 <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -68,7 +60,8 @@
             </div>
             <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
         </footer>
+        <div class="tint"></div>
         <script src="app.js"></script>
-    </div> <!-- End div class="all"-->   
+    </div> 
 </body>
 </html>
