--- a/downloads.html
+++ b/downloads.html
@@ -30,9 +30,11 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <section>
-    </section>
-    <footer>
+    <section class="jumbotron" id="downloads">
+        <div class="my-downloads">
+            <h2>Downloads</h2>
+        </div>
+    </section>    <footer>
         <footer class="footer">
             <div class="social">
                 <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
@@ -40,6 +42,7 @@
             </div>
             <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
         </footer>
+        <div class="tint"></div>
         <script src="app.js"></script>
 </body>
 </html>
