--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="titles">
                 <h1>Jonathan Tang</h1>
-                <p>Trombonist | Educator | Personal Trainer</p>
+                <p>Trombonist | Educator | Recording Engineer</p>
             </div>
             <div class="main_img">
                 <img src="img/homepage_noback.png">
@@ -53,6 +53,7 @@
             </div>
             <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
         </footer>
+        <div class="tint"></div>
         <script src="app.js"></script>
     </div> <!--End div class="all"-->
     
