--- a/media.html
+++ b/media.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
@@ -11,87 +12,130 @@
     <title>Jonathan Tang Music</title>
 </head>
 <body>
-    <nav id="myNav">
-        <div class="brand">
-            <a href="home.html">Jonathan Tang Music</a>
-        </div>
-        <ul class="nav-links">
-            <li><a href="about_me.html">About Me</a></li>
-            <li><a href="lessons.html">Lessons</a></li>
-            <li><a class="active" href="media.html">Media</a></li>
-            <li><a href="downloads.html">Downloads</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <!--<li class="cart"><a href="#"><img src="img/cart.png" /></a></li>-->
-        </ul>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-    </nav>
-    <section>
-        videos here
-    </section>
-    <section>
-        audio here
-    </section>
+    <div class="all">
+        <nav id="myNav">
+            <div class="brand">
+                <a href="home.html">Jonathan Tang Music</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="about_me.html">About Me</a></li>
+                <li><a href="lessons.html">Lessons</a></li>
+                <li><a class="active" href="media.html">Media</a></li>
+                <li><a href="downloads.html">Downloads</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <!--<li class="cart"><a href="#"><img src="img/cart.png" /></a></li>-->
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
+        <section class="jumbotron" id="media">
+            <div class="my-media">
+                <h2>Media</h2>
+            </div>
+        </section>
+        <div class="content">
+            <section class="recording-grid-container">
+                <div class="video-card">
+                    <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
+                    <h3>Artist</h3>
+                    <h5>Title</h5>
+                    <h5>Composer/Arranger</h5>
+                    <p>Event/description</p>
+                </div>
+                <div class="video-card">
+                    <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
+                    <h3>Artist</h3>
+                    <h5>Title</h5>
+                    <h5>Composer/Arranger</h5>
+                    <p>Event/description</p>
+                </div>
+                <div class="audio-card">
+                    <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
+                    <h3>Artist</h3>
+                    <h5>Title</h5>
+                    <h5>Composer/Arranger</h5>
+                    <p>Event/description/Time Stamps?</p>
+                </div>
+                <div class="audio-card">
+                    <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
+                    <h3>Artist</h3>
+                    <h5>Title</h5>
+                    <h5>Composer/Arranger</h5>
+                    <p>Event/description/Time Stamps?</p>
+                </div>
+            </section>
 
-    <!-- IMAGE CAROUSEL -->
-    <section class="pics">
-      <div class="slide-container">
-          <span id="slider-image-1"></span>
-          <span id="slider-image-2"></span>
-          <span id="slider-image-3"></span>
-          <span id="slider-image-4"></span>
-          <span id="slider-image-5"></span>
-          <span id="slider-image-6"></span>
-          <span id="slider-image-7"></span>
-          <span id="slider-image-8"></span>
-          <span id="slider-image-9"></span>
-          <span id="slider-image-10"></span>
-          <span id="slider-image-11"></span>
-        <div class="image-container">
-          <img src="img/gallery1.png" class="slider-image" />
-          <img src="img/gallery2.png" class="slider-image" />
-          <img src="img/gallery3.png" class="slider-image" />
-          <img src="img/gallery4.png" class="slider-image" />
-          <img src="img/gallery5.png" class="slider-image" />
-          <img src="img/gallery6.png" class="slider-image" />
-          <img src="img/gallery7.png" class="slider-image" />
-          <img src="img/gallery8.png" class="slider-image" />
-          <img src="img/gallery9.png" class="slider-image" />
-          <img src="img/gallery10.png" class="slider-image" />
-          <img src="img/gallery11.png" class="slider-image" />
+            <!-- IMAGE CAROUSEL -->
+            <div class="slide-container">
+                    <span id="slider-image-1"></span>
+                    <span id="slider-image-2"></span>
+                    <span id="slider-image-3"></span>
+                    <span id="slider-image-4"></span>
+                    <span id="slider-image-5"></span>
+                    <span id="slider-image-6"></span>
+                    <span id="slider-image-7"></span>
+                    <span id="slider-image-8"></span>
+                    <span id="slider-image-9"></span>
+                    <span id="slider-image-10"></span>
+                    <span id="slider-image-11"></span>
+                <div class="image-container">
+                    <img src="img/gallery1.png" class="slider-image" />
+                    <img src="img/gallery2.png" class="slider-image" id="image-2" />
+                    <img src="img/gallery3.png" class="slider-image" id="image-3" />
+                    <img src="img/gallery4.png" class="slider-image" id="image-4" />
+                    <img src="img/gallery5.png" class="slider-image" />
+                    <img src="img/gallery6.png" class="slider-image" id="image-6" />
+                    <img src="img/gallery7.png" class="slider-image" />
+                    <img src="img/gallery8.png" class="slider-image" id="image-8" />
+                    <img src="img/gallery9.png" class="slider-image" />
+                    <img src="img/gallery10.png" class="slider-image" id="image-10" />
+                    <img src="img/gallery11.png" class="slider-image" />
+                </div>
+                <div class="button-container">
+                    <!-- <a href="#slider-image-1" class="slider-button"></a>
+                    <a href="#slider-image-2" class="slider-button"></a>
+                    <a href="#slider-image-3" class="slider-button"></a>
+                    <a href="#slider-image-4" class="slider-button"></a>
+                    <a href="#slider-image-5" class="slider-button"></a>
+                    <a href="#slider-image-6" class="slider-button"></a>
+                    <a href="#slider-image-7" class="slider-button"></a>
+                    <a href="#slider-image-8" class="slider-button"></a>
+                    <a href="#slider-image-9" class="slider-button"></a>
+                    <a href="#slider-image-10" class="slider-button"></a>
+                    <a href="#slider-image-11" class="slider-button"></a> -->
+                    <a id="slider-button-1" class="slider-button"></a>
+                    <a id="slider-button-2" class="slider-button"></a>
+                    <a id="slider-button-3" class="slider-button"></a>
+                    <a id="slider-button-4" class="slider-button"></a>
+                    <a id="slider-button-5" class="slider-button"></a>
+                    <a id="slider-button-6" class="slider-button"></a>
+                    <a id="slider-button-7" class="slider-button"></a>
+                    <a id="slider-button-8" class="slider-button"></a>
+                    <a id="slider-button-9" class="slider-button"></a>
+                    <a id="slider-button-10" class="slider-button"></a>
+                    <a id="slider-button-11" class="slider-button"></a>
+                </div>
+                <div class="arrow-container">
+                    <img src="img/arrow.png" id="left" />
+                    <img src="img/arrow.png" id="right" />
+                </div>
+            </div>
+            <section class="credit">
+                <h4>Professional Photos Courtesy of Maria Smart Photography</h4>
+            </section>
         </div>
-        <div class="button-container">
-          <a href="#slider-image-1" class="slider-button"></a>
-          <a href="#slider-image-2" class="slider-button"></a>
-          <a href="#slider-image-3" class="slider-button"></a>
-          <a href="#slider-image-4" class="slider-button"></a>
-          <a href="#slider-image-5" class="slider-button"></a>
-          <a href="#slider-image-6" class="slider-button"></a>
-          <a href="#slider-image-7" class="slider-button"></a>
-          <a href="#slider-image-8" class="slider-button"></a>
-          <a href="#slider-image-9" class="slider-button"></a>
-          <a href="#slider-image-10" class="slider-button"></a>
-          <a href="#slider-image-11" class="slider-button"></a>
-        </div>
-        <div class="arrow-container">
-          <img src="img/test.png" id="left" />
-          <img src="img/test.png" id="right" />
-        </div>
-      </div>
-    </section>
-    <section>
-        <h4>Professional Photos Courtesy of Maria Smart Photography</h4>
-    </section>
-    <footer class="footer">
-        <div class="social">
-            <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-            <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-        </div>
-        <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
-    </footer>
+        <footer class="footer">
+            <div class="social">
+                <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+        </footer>
+    </div>
+    <div class="tint"></div>
     <script src="app.js"></script>
 </body>
 </html>
