--- a/about_me.html
+++ b/about_me.html
@@ -31,14 +31,13 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <section>
-            <div class="biography">
-                <h2 class="bio_title">Biography</h2>
-                <img class="banner" src="img/gallery5.jpg">
-                <div class="headshot_background">
-                    <img class="headshot" src="img/bio_headshot.png">
-                </div>
-            </div>            
+        <section class="jumbotron" id="biography-banner">
+            <h2 class="bio_title">Biography</h2>
+            <div class="headshot_background">
+                <img class="headshot" src="img/bio_headshot.png">
+            </div>        
+        </section>
+        <section>        
             <div>
                 <div class="bio_container">
                     <div class="bio_quote">
@@ -53,6 +52,9 @@
                 </div>
             </div>
         </section>
+        <div class="resume">
+            <a class="resume-pdf" href="media/JFenner_Performance Resume (1).pdf" target="_blank" >Resume</a>
+        </div>
         <footer class="footer">
             <div class="social">
                 <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
