fix footer problem and layout issues

--- a/about_me.html
+++ b/about_me.html
@@ -32,10 +32,9 @@
             </div>
         </nav>
         <section class="jumbotron" id="biography-banner">
+            <img src="img/gallery5.png" class="biography-background" />
             <h2 class="bio_title">Biography</h2>
-            <div class="headshot_background">
-                <img class="headshot" src="img/bio_headshot.png">
-            </div>        
+            <img id="headshot" src="img/bio_headshot.png">
         </section>
         <section>        
             <div>
@@ -55,7 +54,7 @@
         <div class="resume">
             <a class="resume-pdf" href="media/JFenner_Performance Resume (1).pdf" target="_blank" >Resume</a>
         </div>
-        <footer class="footer">
+        <footer class="footer" id="footer-aboutMe">
             <div class="social">
                 <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
                 <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
