--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="titles">
                 <h1>Jonathan Tang</h1>
-                <p>Trombonist | Educator | Recording Engineer</p>
+                <p>Musician | Arranger | Educator</p>
             </div>
             <img src="img/homepage_noback.png">
         </div>
