--- a/media.html
+++ b/media.html
@@ -33,9 +33,11 @@
         </nav>
         <section class="jumbotron" id="media">
             <div class="my-media">
+                <img src="img/gallery9.png" class="media-background" />
                 <h2>Media</h2>
             </div>
         </section>
+        <br><br><br>
         <div class="content">
             <section class="recording-grid-container">
                 <div class="video-card">
