--- a/lessons.html
+++ b/lessons.html
@@ -32,7 +32,8 @@
             </div>
         </nav>
         <section class="jumbotron" id="academy">
-            <h1><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
+            <img src="img/banner.png" class="academy-background"/>
+            <h1 id="academy-logo"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
         </section>
         <section class="lessons">
             <h2>Let's work together! If you want to learn, I want to teach!</h2>
@@ -44,39 +45,30 @@
             <img src="img/Poster.JPG" />
         </section>
         <section class="form">
-            <form method="POST" action="lessonForm.php">
+            <form>
                 <div class="name">
-                    <div class="name_label">
-                        <label for="fname">First Name*</label>
-                        <label for="lname" id="lastname">Last Name*</label>
-                    </div>
-                 
                     <div class="name_input">
-                        <input type="text" name="fname" id="fname" required>
-                        <input type="text" name="lname" id="lname" required>
+                        <input type="text" name="fname" id="fname" placeholder="First Name*" required>
+                        <input type="text" name="lname" id="lname" placeholder="Last Name*" required>
                     </div>
                 </div>
                 <br>
 
                 <div class="main_form">
-                <label for="exp">Grade/Experience Level*</label>
                 <br>
-                <input type="text" name="exp" id="exp" required>
+                <input type="text" name="exp" id="exp" placeholder="Grade/Experience Level*" required>
                 <br><br>
 
-                <label for="email">Email Address*</label>
                 <br>
-                <input type="text" name="email" id="email" required>
+                <input type="text" name="email" id="email" placeholder="Email Address*" required>
                 <br><br>
 
-                <label for="phone">Phone Number (optional)</label>
                 <br>
-                <input type="text" name="phone" id="phone">
+                <input type="text" name="phone" id="phone" placeholder="Phone Number (optional)">
                 <br><br>
 
-                <label for="material">What would you like to work on?*</label>
                 <br>
-                <textarea name="message" rows="7" cols="78" id="content" required></textarea>
+                <textarea name="message" rows="7" cols="78" id="content" placeholder="What would you like to work on?*" required></textarea>
                 <br><br>
 
                 <input type="submit" name="send" value="Send" id="send">
