fix lot's of issues

--- a/downloads.html
+++ b/downloads.html
@@ -30,22 +30,24 @@
             <div class="line3"></div>
         </div>
     </nav>
-    <section class="jumbotron" id="downloads">
-        <div class="my-downloads">
-            <img src="img/gallery11.png" class="downloads-background" />
-            <h2>Downloads</h2>
+    <div class="not-nav">
+        <section class="jumbotron" id="downloads">
+            <div class="my-downloads">
+                <img src="img/gallery11.png" class="downloads-background" />
+                <h2>Downloads</h2>
+            </div>
+        </section>   
+        <div>
+            <h3 class="coming-soon">Content coming soon</h3>
         </div>
-    </section>   
-    <div>
-        <h3 class="coming-soon">Content coming soon</h3>
+        <footer class="footer">
+            <div class="social">
+                <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+            </div>
+            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+        </footer>
     </div>
-    <footer class="footer">
-        <div class="social">
-            <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-            <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-        </div>
-        <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
-    </footer>
     <div class="tint"></div>
     <script src="app.js"></script>
 </body>
