--- a/home.html
+++ b/home.html
@@ -35,22 +35,24 @@
         </nav>
 
         <!-- MAIN CONTENT-->
-        <div class="container">
-            <div class="titles">
-                <h1>Jonathan Tang</h1>
-                <p>Musician | Arranger | Educator</p>
+        <div class="not-nav">
+            <div class="container">
+                <div class="titles">
+                    <h1>Jonathan Tang</h1>
+                    <p>Musician | Arranger | Educator</p>
+                </div>
+                <img src="img/homepage_noback.png">
             </div>
-            <img src="img/homepage_noback.png">
-        </div>
 
-        <!-- FOOTER -->
-        <footer class="footer_home">
-            <div class="social">
-                <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-            </div>
-            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
-        </footer>
+            <!-- FOOTER -->
+            <footer class="footer_home">
+                <div class="social">
+                    <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                    <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                </div>
+                <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+            </footer>
+        </div>
         <div class="tint"></div>
         <script src="app.js"></script>
     </div> <!--End div class="all"-->
