--- a/media.html
+++ b/media.html
@@ -31,113 +31,105 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <section class="jumbotron" id="media">
-            <div class="my-media">
-                <img src="img/gallery9.png" class="media-background" />
-                <h2>Media</h2>
-            </div>
-        </section>
-        <br><br><br>
-        <div class="content">
-            <section class="recording-grid-container">
-                <div class="video-card">
-                    <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
-                    <h3>Artist</h3>
-                    <h5>Title</h5>
-                    <h5>Composer/Arranger</h5>
-                    <p>Event/description</p>
-                </div>
-                <div class="video-card">
-                    <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
-                    <h3>Artist</h3>
-                    <h5>Title</h5>
-                    <h5>Composer/Arranger</h5>
-                    <p>Event/description</p>
-                </div>
-                <div class="audio-card">
-                    <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
-                    <h3>Artist</h3>
-                    <h5>Title</h5>
-                    <h5>Composer/Arranger</h5>
-                    <p>Event/description/Time Stamps?</p>
-                </div>
-                <div class="audio-card">
-                    <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
-                    <h3>Artist</h3>
-                    <h5>Title</h5>
-                    <h5>Composer/Arranger</h5>
-                    <p>Event/description/Time Stamps?</p>
+        <div class="not-nav">
+            <section class="jumbotron" id="media">
+                <div class="my-media">
+                    <img src="img/gallery9.png" class="media-background" />
+                    <h2>Media</h2>
                 </div>
             </section>
+            <br><br><br>
+            <div class="content">
+                <section class="recording-grid-container">
+                    <div class="video-card">
+                        <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
+                        <h3>Artist</h3>
+                        <h5>Title</h5>
+                        <h5>Composer/Arranger</h5>
+                        <p>Event/description</p>
+                    </div>
+                    <div class="video-card">
+                        <iframe src="https://www.youtube.com/embed/p1cvZ_Zfpqo" allowfullscreen></iframe>
+                        <h3>Artist</h3>
+                        <h5>Title</h5>
+                        <h5>Composer/Arranger</h5>
+                        <p>Event/description</p>
+                    </div>
+                    <div class="audio-card">
+                        <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
+                        <h3>Artist</h3>
+                        <h5>Title</h5>
+                        <h5>Composer/Arranger</h5>
+                        <p>Event/description/Time Stamps?</p>
+                    </div>
+                    <div class="audio-card">
+                        <audio src="media/example.mp3" type="audio/mp3" controls >This browser does not support mp3 files.</audio>
+                        <h3>Artist</h3>
+                        <h5>Title</h5>
+                        <h5>Composer/Arranger</h5>
+                        <p>Event/description/Time Stamps?</p>
+                    </div>
+                </section>
 
-            <!-- IMAGE CAROUSEL -->
-            <div class="slide-container">
-                    <span id="slider-image-1"></span>
-                    <span id="slider-image-2"></span>
-                    <span id="slider-image-3"></span>
-                    <span id="slider-image-4"></span>
-                    <span id="slider-image-5"></span>
-                    <span id="slider-image-6"></span>
-                    <span id="slider-image-7"></span>
-                    <span id="slider-image-8"></span>
-                    <span id="slider-image-9"></span>
-                    <span id="slider-image-10"></span>
-                    <span id="slider-image-11"></span>
-                <div class="image-container">
-                    <img src="img/gallery1.png" class="slider-image" />
-                    <img src="img/gallery2.png" class="slider-image" id="image-2" />
-                    <img src="img/gallery3.png" class="slider-image" id="image-3" />
-                    <img src="img/gallery4.png" class="slider-image" id="image-4" />
-                    <img src="img/gallery5.png" class="slider-image" />
-                    <img src="img/gallery6.png" class="slider-image" id="image-6" />
-                    <img src="img/gallery7.png" class="slider-image" />
-                    <img src="img/gallery8.png" class="slider-image" id="image-8" />
-                    <img src="img/gallery9.png" class="slider-image" />
-                    <img src="img/gallery10.png" class="slider-image" id="image-10" />
-                    <img src="img/gallery11.png" class="slider-image" />
+                <!-- IMAGE CAROUSEL -->
+                <div class="slide-container">
+                        <span id="slider-image-1"></span>
+                        <span id="slider-image-2"></span>
+                        <span id="slider-image-3"></span>
+                        <span id="slider-image-4"></span>
+                        <span id="slider-image-5"></span>
+                        <span id="slider-image-6"></span>
+                        <span id="slider-image-7"></span>
+                        <span id="slider-image-8"></span>
+                        <span id="slider-image-9"></span>
+                        <span id="slider-image-10"></span>
+                        <span id="slider-image-11"></span>
+                    <div class="image-container">
+                        <img src="img/gallery1.png" class="slider-image" />
+                        <img src="img/gallery2.png" class="slider-image" id="image-2" />
+                        <img src="img/gallery3.png" class="slider-image" id="image-3" />
+                        <img src="img/gallery4.png" class="slider-image" id="image-4" />
+                        <img src="img/gallery5.png" class="slider-image" />
+                        <img src="img/gallery6.png" class="slider-image" id="image-6" />
+                        <img src="img/gallery7.png" class="slider-image" />
+                        <img src="img/gallery8.png" class="slider-image" id="image-8" />
+                        <img src="img/gallery9.png" class="slider-image" />
+                        <img src="img/gallery10.png" class="slider-image" id="image-10" />
+                        <img src="img/gallery11.png" class="slider-image" />
+                    </div>
+                    <div class="button-container">
+                        <a id="slider-button-1" class="slider-button slider-button-active"></a>
+                        <a id="slider-button-2" class="slider-button"></a>
+                        <a id="slider-button-3" class="slider-button"></a>
+                        <a id="slider-button-4" class="slider-button"></a>
+                        <a id="slider-button-5" class="slider-button"></a>
+                        <a id="slider-button-6" class="slider-button"></a>
+                        <a id="slider-button-7" class="slider-button"></a>
+                        <a id="slider-button-8" class="slider-button"></a>
+                        <a id="slider-button-9" class="slider-button"></a>
+                        <a id="slider-button-10" class="slider-button"></a>
+                        <a id="slider-button-11" class="slider-button"></a>
+                    </div>
+                    <div class="arrow-container">
+                        <img src="img/arrow.png" id="left" />
+                        <img src="img/arrow.png" id="right" />
+                    </div>
                 </div>
-                <div class="button-container">
-                    <!-- <a href="#slider-image-1" class="slider-button"></a>
-                    <a href="#slider-image-2" class="slider-button"></a>
-                    <a href="#slider-image-3" class="slider-button"></a>
-                    <a href="#slider-image-4" class="slider-button"></a>
-                    <a href="#slider-image-5" class="slider-button"></a>
-                    <a href="#slider-image-6" class="slider-button"></a>
-                    <a href="#slider-image-7" class="slider-button"></a>
-                    <a href="#slider-image-8" class="slider-button"></a>
-                    <a href="#slider-image-9" class="slider-button"></a>
-                    <a href="#slider-image-10" class="slider-button"></a>
-                    <a href="#slider-image-11" class="slider-button"></a> -->
-                    <a id="slider-button-1" class="slider-button"></a>
-                    <a id="slider-button-2" class="slider-button"></a>
-                    <a id="slider-button-3" class="slider-button"></a>
-                    <a id="slider-button-4" class="slider-button"></a>
-                    <a id="slider-button-5" class="slider-button"></a>
-                    <a id="slider-button-6" class="slider-button"></a>
-                    <a id="slider-button-7" class="slider-button"></a>
-                    <a id="slider-button-8" class="slider-button"></a>
-                    <a id="slider-button-9" class="slider-button"></a>
-                    <a id="slider-button-10" class="slider-button"></a>
-                    <a id="slider-button-11" class="slider-button"></a>
-                </div>
-                <div class="arrow-container">
-                    <img src="img/arrow.png" id="left" />
-                    <img src="img/arrow.png" id="right" />
-                </div>
+                <section class="credit">
+                    <h4>Professional Photos Courtesy of Maria Smart Photography</h4>
+                </section>
             </div>
-            <section class="credit">
-                <h4>Professional Photos Courtesy of Maria Smart Photography</h4>
-            </section>
+            <footer class="footer">
+                <div class="social">
+                    <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                    <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                </div>
+                <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+            </footer>
         </div>
-        <footer class="footer">
-            <div class="social">
-                <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-            </div>
-            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
-        </footer>
     </div>
     <div class="tint"></div>
     <script src="app.js"></script>
+    <script src="media.js"></script>
 </body>
 </html>
