--- a/about_me.html
+++ b/about_me.html
@@ -31,36 +31,38 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <section class="jumbotron" id="biography-banner">
-            <img src="img/gallery5.png" class="biography-background" />
-            <h2 class="bio_title">Biography</h2>
-            <img id="headshot" src="img/bio_headshot.png">
-        </section>
-        <section>        
-            <div>
-                <div class="bio_container">
-                    <div class="bio_quote">
-                        <h2>"That's a trombone?!"</h2>
-                    </div>
-                    <div class="bio">
-                        <p>Jonathan Tang is a freelance classical and jazz trombonist, educator, recording engineer, arranger, and personal trainer who is currently based in Cincinnati, Ohio. He was born in Augusta, Georgia, and unlike many musicians, his passion for music had a very late beginning. His first several years with the instrument were not the best, which made him loathe the trombone entirely. He even considered quitting music until he met his friend and colleague, Eric Spencer. Eric showed him how the trombone could sound and Jonathan immediately fell in love with the instrument. He recalls his initial reaction to Eric’s playing being, “that’s a trombone?!” Ever since then, Jonathan has been on the path to become the best musician he can be.</p>
-                        <p>One of Jonathan’s philosophies is “any music with a trombone is good music”, which in turn has led him to be a prolific musician on both tenor and bass trombone. Some of his favorite groups to perform with are the Queen City Trombone Quartet, Odyssey Big Band, Play of The Game, CCM Brass Choir, Southern Brass Quintet, and CCM Wind Symphony. Additionally, some of his favorite productions he’s performed to date include Chicago, Nice Work If You Can Get It, Annie, and Guys and Dolls.</p>
-                        <p>Jonathan is currently a Second-Year Masters of Music student at the College-Conservatory of Music in Cincinnati, Ohio where he studies Trombone Performance with Timothy Anderson. Since he has been there, he’s had the opportunity to become a founding member of the Queen City Trombone Quartet. This distinguished quartet is comprised entirely of masters students from around the country. His other influential teachers include Richard Mason and Eric Spencer. He recently performed in masterclasses for Peter Steiner, Harry Watters, Eric Mintel Quartet, and Byron Stripling.</p>
-                        <p>In his spare time, Jonathan enjoys powerlifting and weight training, cooking, multi-tracking, photography, and playing video games.</p>
+        <div class="not-nav">
+            <section class="jumbotron" id="biography-banner">
+                <img src="img/gallery5.png" class="biography-background" />
+                <h2 class="bio_title">Biography</h2>
+                <img id="headshot" src="img/bio_headshot.png">
+            </section>
+            <section>        
+                <div>
+                    <div class="bio_container">
+                        <div class="bio_quote">
+                            <h2>"That's a trombone?!"</h2>
+                        </div>
+                        <div class="bio">
+                            <p>Jonathan Tang is a freelance classical and jazz trombonist, educator, recording engineer, arranger, and personal trainer who is currently based in Cincinnati, Ohio. He was born in Augusta, Georgia, and unlike many musicians, his passion for music had a very late beginning. His first several years with the instrument were not the best, which made him loathe the trombone entirely. He even considered quitting music until he met his friend and colleague, Eric Spencer. Eric showed him how the trombone could sound and Jonathan immediately fell in love with the instrument. He recalls his initial reaction to Eric’s playing being, “that’s a trombone?!” Ever since then, Jonathan has been on the path to become the best musician he can be.</p>
+                            <p>One of Jonathan’s philosophies is “any music with a trombone is good music”, which in turn has led him to be a prolific musician on both tenor and bass trombone. Some of his favorite groups to perform with are the Queen City Trombone Quartet, Odyssey Big Band, Play of The Game, CCM Brass Choir, Southern Brass Quintet, and CCM Wind Symphony. Additionally, some of his favorite productions he’s performed to date include Chicago, Nice Work If You Can Get It, Annie, and Guys and Dolls.</p>
+                            <p>Jonathan is currently a Second-Year Masters of Music student at the College-Conservatory of Music in Cincinnati, Ohio where he studies Trombone Performance with Timothy Anderson. Since he has been there, he’s had the opportunity to become a founding member of the Queen City Trombone Quartet. This distinguished quartet is comprised entirely of masters students from around the country. His other influential teachers include Richard Mason and Eric Spencer. He recently performed in masterclasses for Peter Steiner, Harry Watters, Eric Mintel Quartet, and Byron Stripling.</p>
+                            <p>In his spare time, Jonathan enjoys powerlifting and weight training, cooking, multi-tracking, photography, and playing video games.</p>
+                        </div>
                     </div>
                 </div>
+            </section>
+            <div class="resume">
+                <a class="resume-pdf" href="media/JFenner_Performance Resume (1).pdf" target="_blank" >Resume</a>
             </div>
-        </section>
-        <div class="resume">
-            <a class="resume-pdf" href="media/JFenner_Performance Resume (1).pdf" target="_blank" >Resume</a>
+            <footer class="footer" id="footer-aboutMe">
+                <div class="social">
+                    <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                    <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                </div>
+                <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+            </footer>
         </div>
-        <footer class="footer" id="footer-aboutMe">
-            <div class="social">
-                <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-            </div>
-            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
-        </footer>
         <div class="tint"></div>
         <script src="app.js"></script>
     </div> 
