--- a/lessons.html
+++ b/lessons.html
@@ -31,59 +31,63 @@
                 <div class="line3"></div>
             </div>
         </nav>
-        <section class="jumbotron" id="academy">
-            <img src="img/banner.png" class="academy-background"/>
-            <h1 id="academy-logo"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
-        </section>
-        <section class="lessons">
-            <h2>Let's work together! If you want to learn, I want to teach!</h2>
-            <p>Like many of my colleagues, lately I’ve been feeling a little unfulfilled spiritually due to the lack of camaraderie with friends/colleagues/students and I’ve been feeling that I wanted to get back into teaching. When I was still in my undergrad I was teaching on a weekly basis which not only helped my students, but also helped me develop and hone my craft as a teacher. This is something I haven’t been able to do yet at CCM and I miss it very much! I’ve helped guide students in the direction they want and I’m very pleased with how far they’ve gone. Several have made Allstate and even continued to pursue music in college.</p>
-            <p>Today, I would like to invite any brass players to join my online studio. To follow social guidelines, any and all lessons will be online for the foreseeable future. I’ve reduced my rates to compensate for this. Don’t wait until August to start preparing for Allstate, National Youth Orchestra, or College auditions. Start preparing and planning now! If you want to learn I want to teach! If you are a music educator and you’ve got trombone players that need help, please send them my way!</p>
-            <p>For rates and options please see the poster below. I look forward to working with some of you soon!</p>
-        </section>
-        <section class="poster">
-            <img src="img/Poster.JPG" />
-        </section>
-        <section class="form">
-            <form>
-                <div class="name">
-                    <div class="name_input">
-                        <input type="text" name="fname" id="fname" placeholder="First Name*" required>
-                        <input type="text" name="lname" id="lname" placeholder="Last Name*" required>
+        <div class="not-nav">
+            <section class="jumbotron" id="academy">
+                <img src="img/banner.png" class="academy-background"/>
+                <h1 id="academy-logo"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
+            </section>
+            <section class="lessons">
+                <h2>Let's work together! If you want to learn, I want to teach!</h2>
+                <p>Like many of my colleagues, lately I’ve been feeling a little unfulfilled spiritually due to the lack of camaraderie with friends/colleagues/students and I’ve been feeling that I wanted to get back into teaching. When I was still in my undergrad I was teaching on a weekly basis which not only helped my students, but also helped me develop and hone my craft as a teacher. This is something I haven’t been able to do yet at CCM and I miss it very much! I’ve helped guide students in the direction they want and I’m very pleased with how far they’ve gone. Several have made Allstate and even continued to pursue music in college.</p>
+                <p>Today, I would like to invite any brass players to join my online studio. To follow social guidelines, any and all lessons will be online for the foreseeable future. I’ve reduced my rates to compensate for this. Don’t wait until August to start preparing for Allstate, National Youth Orchestra, or College auditions. Start preparing and planning now! If you want to learn I want to teach! If you are a music educator and you’ve got trombone players that need help, please send them my way!</p>
+                <p>For rates and options please see the poster below. I look forward to working with some of you soon!</p>
+            </section>
+            <section class="poster">
+                <img src="img/Poster.JPG" />
+            </section>
+            <section class="form">
+                <form>
+                    <div class="name">
+                        <div class="name_input">
+                            <input type="text" name="fname" id="fname" placeholder="First Name*" required>
+                            <input type="text" name="lname" id="lname" placeholder="Last Name*" required>
+                        </div>
                     </div>
+                    <br>
+
+                    <div class="main_form">
+                    <br>
+                    <input type="text" name="exp" id="exp" placeholder="Grade/Experience Level*" required>
+                    <br><br>
+
+                    <br>
+                    <input type="text" name="email" id="email" placeholder="Email Address*" required>
+                    <br><br>
+
+                    <br>
+                    <input type="text" name="phone" id="phone" placeholder="Phone Number (optional)">
+                    <br><br>
+
+                    <br>
+                    <textarea name="message" rows="7" cols="78" id="content" placeholder="What would you like to work on?*" required></textarea>
+                    <br><br>
+
+                    <input type="submit" name="send" value="Send" id="send">
                 </div>
-                <br>
-
-                <div class="main_form">
-                <br>
-                <input type="text" name="exp" id="exp" placeholder="Grade/Experience Level*" required>
-                <br><br>
-
-                <br>
-                <input type="text" name="email" id="email" placeholder="Email Address*" required>
-                <br><br>
-
-                <br>
-                <input type="text" name="phone" id="phone" placeholder="Phone Number (optional)">
-                <br><br>
-
-                <br>
-                <textarea name="message" rows="7" cols="78" id="content" placeholder="What would you like to work on?*" required></textarea>
-                <br><br>
-
-                <input type="submit" name="send" value="Send" id="send">
-            </div>
-            </form>
-        </section>
-        <footer class="footer">
-            <div class="social">
-                <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-            </div>
-            <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
-        </footer>
+                </form>
+            </section>
+            <footer class="footer">
+                <div class="social">
+                    <a href="https://www.facebook.com/jaytangmusic" target="_blank"><i class="fab fa-facebook-f fa-lg"></i></a>
+                    <a href="https://www.instagram.com/jaytangmusic/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
+                </div>
+                <p class="copy">Copyright &copy 2020 Jonathan Tang. Website created by Jacob Fenner</p>
+            </footer>
+        </div>
         <div class="tint"></div>
         <script src="app.js"></script>
+        <script src="lessons.js"></script>
     </div>
+    
 </body>
 </html>
