--- a/about_me.html
+++ b/about_me.html
@@ -35,7 +35,7 @@
             <section class="jumbotron" id="biography-banner">
                 <img src="img/gallery5.png" class="biography-background" />
                 <h2 class="bio_title">Biography</h2>
-                <img id="headshot" src="img/bio_headshot.png">
+                <img id="headshot" src="img/bio_headshot.png" />
             </section>
             <section>        
                 <div>
@@ -65,6 +65,7 @@
         </div>
         <div class="tint"></div>
         <script src="app.js"></script>
+        <script src="about_me.js"></script>
     </div> 
 </body>
 </html>
