--- a/lessons.html
+++ b/lessons.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@400;500;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/df64cf7d99.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
     <title>Jonathan Tang Music</title>
 </head>
 <body>
@@ -34,7 +34,50 @@
         <div class="not-nav">
             <section class="jumbotron" id="academy">
                 <img src="img/banner.png" class="academy-background"/>
-                <h1 id="academy-logo"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
+                <h1 class="academy-logo academy-quotes"><span>Cincinnati</span> <span>Brass</span> <span>Academy</span></h1>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>If you are an aspiring trombone player, message him and ask for a lesson because he gave me some great information!</p>
+                    <h6><span>-HOLDEN WELCH</span> <span>NORTHWESTERN UNIVERSITY '24</span></h6>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>Some days I don't feel like practicing, but your quote about motivation and discipline really struck me.</p>
+                    <h6><span>-TANNER O'BEN</span> <span>CBA STUDENT</span></h6>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>You're a great teacher. The amount of time you invest in your students you haven't even met in person is amazing. Thank you so much for helping me through my musical journey.</p>
+                    <h6><span>-CHRISTIAN ESTADES</span> <span>CBA STUDENT</span></p>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>You are a very good teacher. You have improved a lot since this summer. I definitely noticed it last week since I hadn't had a lesson with you in a while. You know how to keep things even more concise now. It's cool to see the growth in people!</p>
+                    <h6><span>-CHRIST LARSON</span> <span>COLUMBUS STATE UNIVERSITY '24</span></h6>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>After taking lessons with you, I was recording in front of my band director and two friends and they were all surprised! All thanks to you!</p>
+                    <h6><span>-JOHN SHIM</span> <span>CBA STUDENT</span></h6>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>To be honest, part of the reason I stopped taking lessons from my former teacher is because they were always so negative. I've really appreciated your optimism and positivity.</p>
+                    <h6><span></span><span>-CBA STUDENT</span></h6>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                <div class="academy-quotes">
+                    <img src="img/quote-icon.png" class="quote-icon" />
+                    <p>I've never been able to play up to a high E before so this is exciting. I don't think I've ever learned this much in a lesson before.</p>
+                    <h6><span>-SHIN TANAKA</span> <span>YST CONSERVATORY OF MUSIC</span></h6>
+                    <h5>CINCINNATI BRASS ACADEMY</h5>
+                </div>
+                
             </section>
             <section class="lessons">
                 <h2>Let's work together! If you want to learn, I want to teach!</h2>
